--- a/views/home.ejs
+++ b/views/home.ejs
@@ -67,30 +67,34 @@
     <main>
       <div class="todo-content-div">
         <ul>
-          <% for (let i of todo_items) { %>
-          <li>
-            <input type="checkbox" class="check-box" value="<%= i.id %>" />
-            <div class="todo-content">
-              <div class="des-date">
-                <p class="list-text"><%= i.description %></p>
-                <p class="date-text">
-                  <i class="fa-solid fa-calendar-days"></i><%= i.date %>
-                </p>
-              </div>
-
-              <p class="list-text tags"><%= i.category %></p>
+          <li class="create-todo">
+            <input type="checkbox" class="check-box" />
+            <div class="todo-content cntd">
+              <p class="list-text">Create a new todo...</p>
             </div>
-            <a href="/delete-task?id=<%= i.id %>" class="delete-icon hidden"
-              ><i class="fa-solid fa-trash"></i
-            ></a>
           </li>
-          <% } %>
+          <div class="main-todo-list">
+            <% for (let i of todo_items) { %>
+            <li class="todo-content-div-list">
+              <input type="checkbox" class="check-box" value="<%= i.id %>" />
+              <div class="todo-content">
+                <div class="des-date">
+                  <p class="list-text"><%= i.description %></p>
+                  <p class="date-text">
+                    <i class="fa-solid fa-calendar-days"></i><%= i.date %>
+                  </p>
+                </div>
+
+                <p class="list-text tags"><%= i.category %></p>
+              </div>
+              <a href="/delete-task?id=<%= i.id %>" class="delete-icon hidden"
+                ><i class="fa-solid fa-trash"></i
+              ></a>
+            </li>
+            <% } %>
+          </div>
         </ul>
       </div>
-      <button class="create-todo-short cts-btn">
-        <i class="fa-solid fa-plus"></i>
-        <span>ADD TASK</span>
-      </button>
     </main>
     <script src="/js/home.js"></script>
   </body>
