--- a/views/home.ejs
+++ b/views/home.ejs
@@ -68,7 +68,7 @@
       <div class="todo-content-div">
         <ul>
           <li class="create-todo">
-            <input type="checkbox" class="check-box" />
+            <input type="checkbox" class="check-box-create" />
             <div class="todo-content cntd">
               <p class="list-text">Create a new todo...</p>
             </div>
